# 3DGS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
assets/: 3DGS.ipynb
config/: base.yaml  base.yml  extended.yaml  extended.yml
cuda/: adaptive_density.cu  checks.cuh  culling.cu  data.cu  gaussian.cu  gaussian_backward.cu  loss.cu  optimizer.cu  projection.cu  projection_backward.cu  raster.cu  render.cu  render_backward.cu  spherical_harmonics.cu  spherical_harmonics_backward.cu  trainer.cu
include/dataloader/: colmap.hpp
include/gsplat/: adaptive_density.hpp  cuda_backward.cuh  cuda_backward.hpp  cuda_data.cuh  cuda_data.hpp  cuda_forward.cuh  cuda_forward.hpp  gaussian.hpp  loss.hpp  optimize.hpp  optimizer.hpp  progress_bar.hpp  raster.cuh  raster.hpp  trainer.cuh  trainer.hpp  utils.hpp
include/gsplat_cuda/: adaptive_density.cuh  cuda_backward.cuh  cuda_data.cuh  cuda_forward.cuh  optimizer.cuh  raster.cuh  trainer.cuh
src/: colmap.cpp  data.cpp  data.cu  gaussian.cpp  loss.cpp  main.cpp  optimize.cpp  raster.cpp  raster.cu  trainer.cpp  trainer.cu  utils.cpp
tests/: adaptive_density_test.cpp  colmap_test.cpp  cuda_backward_test.cpp  cuda_data_test.cpp  cuda_forward_test.cpp  gaussian_test.cpp  loss_test.cpp  optimize_test.cpp  optimizer_test.cpp  trainer_test.cpp  utils_test.cpp
